fixed responsiveness for img on mobileo

--- a/src/Styles/componentstyles/beerdetails.scss
+++ b/src/Styles/componentstyles/beerdetails.scss
@@ -5,7 +5,7 @@
     margin-bottom: 1rem;
 
     @include mobile {
-        width: auto;
+        width: 100%;
     }
 
     .main-beerdetails-1 {
